### Refactor envrionment variables to set them all at cfg Update name of the docker image (HEAD -> main)
>Wed, 12 Jun 2024 22:48:36 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### Update README.rst
>Wed, 12 Jun 2024 20:26:17 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)

Fix image and container names


### Update README.rst
>Wed, 12 Jun 2024 20:23:28 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)

Fix README


### Update deploy.sh
>Wed, 12 Jun 2024 20:00:34 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)

standardization of docker image and container names


### Update build.sh
>Wed, 12 Jun 2024 19:54:07 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: GitHub (noreply@github.com)




### Fix dashboard and configg for GeoIP (Geomatys-feat/observability)
>Wed, 12 Jun 2024 19:42:38 +0200

>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)




### fix(Python): refactor otel/uvicorn binding to use "on_event('startup')" feature instead of lifespan.
>Wed, 12 Jun 2024 16:48:40 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)

Use of lifespan broke tortoise shutdown (which use on_event("shutdown") in ws_router file.



### refactor(Compose): change api configuration binding
>Wed, 12 Jun 2024 14:14:28 +0200

>Author: Alexis Manin (alexis.manin@geomatys.com)

>Commiter: Alexis Manin (alexis.manin@geomatys.com)

Use bind mount instead of config block, to enhance retro-compatibility with older versions of docker-compose



### doc(Compose): fix image and link