@@ -107,7 +107,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "description": "",
       "fieldConfig": {
@@ -192,7 +192,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "code",
           "expr": "{geoip_continent_code=~\".+\"} | json | line_format `longitude={{.geoip_location_longitude}} latitude={{.geoip_location_latitude}}` | logfmt",
@@ -215,7 +215,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "fieldConfig": {
         "defaults": {
@@ -293,7 +293,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "code",
           "expr": "{service_name=\"planetary-crs-registry\", geoip_continent_code=~\".+\"} | unpack",
@@ -345,7 +345,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "fieldConfig": {
         "defaults": {
@@ -423,7 +423,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "code",
           "expr": "{service_name=\"planetary-crs-registry\", geoip_continent_code=~\".+\"} | unpack",
@@ -492,7 +492,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "fieldConfig": {
         "defaults": {
@@ -570,7 +570,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "builder",
           "expr": "{uri_path=~\".+\"}",
@@ -719,7 +719,7 @@
     {
       "datasource": {
         "type": "tempo",
-        "uid": "${DS_TEMPO}"
+        "uid": "tempo"
       },
       "fieldConfig": {
         "defaults": {
@@ -808,7 +808,7 @@
         {
           "datasource": {
             "type": "tempo",
-            "uid": "${DS_TEMPO}"
+            "uid": "tempo"
           },
           "filters": [
             {
@@ -868,7 +868,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "fieldConfig": {
         "defaults": {
@@ -969,7 +969,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "code",
           "expr": "{level=~\"ERROR|WARN\"} |= `` | unpack | line_format `{{ regexReplaceAll \"exception\\\\.\" __line__ \"\" }}` | json reason=\"attributes.message\", stacktrace=\"attributes.stacktrace\", body=\"body\" | label_format message=`{{ default .body .reason }}`",
@@ -1005,7 +1005,7 @@
     {
       "datasource": {
         "type": "loki",
-        "uid": "${DS_LOKI}"
+        "uid": "loki"
       },
       "fieldConfig": {
         "defaults": {
@@ -1065,7 +1065,7 @@
         {
           "datasource": {
             "type": "loki",
-            "uid": "${DS_LOKI}"
+            "uid": "loki"
           },
           "editorMode": "builder",
           "expr": "{status_code=~\"\\\\d+\"} |= ``",
